Part3/y.output
State 89 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: scope

    2 scope: '{' declarations statements '}'

    3 declarations: declarations declaration
    4             | %empty

    5 statements: statements statement
    6           | %empty

    7 declaration: type ID ';'
    8            | type ID '=' expression ';'
    9            | CONST type ID '=' expression ';'

   10 statement: variable '=' expression ';'
   11          | IF '(' expression ')' statement ELSE statement
   12          | IF '(' expression ')' statement
   13          | scope
   14          | ';'

   15 type: INT_T
   16     | IVEC_T
   17     | BOOL_T
   18     | BVEC_T
   19     | FLOAT_T
   20     | VEC_T

   21 expression: type '(' arguments_opt ')'
   22           | FUNC '(' arguments_opt ')'
   23           | '-' expression
   24           | '!' expression
   25           | expression AND expression
   26           | expression OR expression
   27           | expression EQ expression
   28           | expression NEQ expression
   29           | expression '<' expression
   30           | expression LEQ expression
   31           | expression '>' expression
   32           | expression GEQ expression
   33           | expression '+' expression
   34           | expression '-' expression
   35           | expression '*' expression
   36           | expression '/' expression
   37           | expression '^' expression
   38           | TRUE_C
   39           | FALSE_C
   40           | INT_C
   41           | FLOAT_C
   42           | '(' expression ')'

   43 $@1: %empty

   44 expression: variable $@1

   45 variable: ID
   46         | ID '[' INT_C ']'

   47 arguments: arguments ',' expression
   48          | expression

   49 arguments_opt: arguments
   50              | %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 24
'(' (40) 11 12 21 22 42
')' (41) 11 12 21 22 42
'*' (42) 35
'+' (43) 33
',' (44) 47
'-' (45) 23 34
'/' (47) 36
';' (59) 7 8 9 10 14
'<' (60) 29
'=' (61) 8 9 10
'>' (62) 31
'[' (91) 46
']' (93) 46
'^' (94) 37
'{' (123) 2
'}' (125) 2
error (256)
FLOAT_T (258) 19
INT_T (259) 15
BOOL_T (260) 17
CONST (261) 9
FALSE_C (262) 39
TRUE_C (263) 38
IF (264) 11 12
ELSE (265) 11
AND (266) 25
OR (267) 26
NEQ (268) 28
EQ (269) 27
LEQ (270) 30
GEQ (271) 32
FUNC (272) 22
VEC_T (273) 20
BVEC_T (274) 18
IVEC_T (275) 16
FLOAT_C (276) 41
INT_C (277) 40 46
ID (278) 7 8 9 45 46
UMINUS (279)
WITHOUT_ELSE (280)
WITH_ELSE (281)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1, on right: 0
scope (46)
    on left: 2, on right: 1 13
declarations (47)
    on left: 3 4, on right: 2 3
statements (48)
    on left: 5 6, on right: 2 5
declaration (49)
    on left: 7 8 9, on right: 3
statement (50)
    on left: 10 11 12 13 14, on right: 5 11 12
type (51)
    on left: 15 16 17 18 19 20, on right: 7 8 9 21
expression (52)
    on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
    39 40 41 42 44, on right: 8 9 10 11 12 23 24 25 26 27 28 29 30
    31 32 33 34 35 36 37 42 47 48
$@1 (53)
    on left: 43, on right: 44
variable (54)
    on left: 45 46, on right: 10 44
arguments (55)
    on left: 47 48, on right: 47 49
arguments_opt (56)
    on left: 49 50, on right: 21 22


State 0

    0 $accept: . program $end

    '{'  shift, and go to state 1

    program  go to state 2
    scope    go to state 3


State 1

    2 scope: '{' . declarations statements '}'

    $default  reduce using rule 4 (declarations)

    declarations  go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: scope .

    $default  reduce using rule 1 (program)


State 4

    2 scope: '{' declarations . statements '}'
    3 declarations: declarations . declaration

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    CONST    shift, and go to state 9
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12

    $default  reduce using rule 6 (statements)

    statements   go to state 13
    declaration  go to state 14
    type         go to state 15


State 5

    0 $accept: program $end .

    $default  accept


State 6

   19 type: FLOAT_T .

    $default  reduce using rule 19 (type)


State 7

   15 type: INT_T .

    $default  reduce using rule 15 (type)


State 8

   17 type: BOOL_T .

    $default  reduce using rule 17 (type)


State 9

    9 declaration: CONST . type ID '=' expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12

    type  go to state 16


State 10

   20 type: VEC_T .

    $default  reduce using rule 20 (type)


State 11

   18 type: BVEC_T .

    $default  reduce using rule 18 (type)


State 12

   16 type: IVEC_T .

    $default  reduce using rule 16 (type)


State 13

    2 scope: '{' declarations statements . '}'
    5 statements: statements . statement

    IF   shift, and go to state 17
    ID   shift, and go to state 18
    '{'  shift, and go to state 1
    '}'  shift, and go to state 19
    ';'  shift, and go to state 20

    scope      go to state 21
    statement  go to state 22
    variable   go to state 23


State 14

    3 declarations: declarations declaration .

    $default  reduce using rule 3 (declarations)


State 15

    7 declaration: type . ID ';'
    8            | type . ID '=' expression ';'

    ID  shift, and go to state 24


State 16

    9 declaration: CONST type . ID '=' expression ';'

    ID  shift, and go to state 25


State 17

   11 statement: IF . '(' expression ')' statement ELSE statement
   12          | IF . '(' expression ')' statement

    '('  shift, and go to state 26


State 18

   45 variable: ID .
   46         | ID . '[' INT_C ']'

    '['  shift, and go to state 27

    $default  reduce using rule 45 (variable)


State 19

    2 scope: '{' declarations statements '}' .

    $default  reduce using rule 2 (scope)


State 20

   14 statement: ';' .

    $default  reduce using rule 14 (statement)


State 21

   13 statement: scope .

    $default  reduce using rule 13 (statement)


State 22

    5 statements: statements statement .

    $default  reduce using rule 5 (statements)


State 23

   10 statement: variable . '=' expression ';'

    '='  shift, and go to state 28


State 24

    7 declaration: type ID . ';'
    8            | type ID . '=' expression ';'

    ';'  shift, and go to state 29
    '='  shift, and go to state 30


State 25

    9 declaration: CONST type ID . '=' expression ';'

    '='  shift, and go to state 31


State 26

   11 statement: IF '(' . expression ')' statement ELSE statement
   12          | IF '(' . expression ')' statement

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 41
    variable    go to state 42


State 27

   46 variable: ID '[' . INT_C ']'

    INT_C  shift, and go to state 43


State 28

   10 statement: variable '=' . expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 44
    variable    go to state 42


State 29

    7 declaration: type ID ';' .

    $default  reduce using rule 7 (declaration)


State 30

    8 declaration: type ID '=' . expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 45
    variable    go to state 42


State 31

    9 declaration: CONST type ID '=' . expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 46
    variable    go to state 42


State 32

   39 expression: FALSE_C .

    $default  reduce using rule 39 (expression)


State 33

   38 expression: TRUE_C .

    $default  reduce using rule 38 (expression)


State 34

   22 expression: FUNC . '(' arguments_opt ')'

    '('  shift, and go to state 47


State 35

   41 expression: FLOAT_C .

    $default  reduce using rule 41 (expression)


State 36

   40 expression: INT_C .

    $default  reduce using rule 40 (expression)


State 37

   23 expression: '-' . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 48
    variable    go to state 42


State 38

   24 expression: '!' . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 49
    variable    go to state 42


State 39

   42 expression: '(' . expression ')'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 50
    variable    go to state 42


State 40

   21 expression: type . '(' arguments_opt ')'

    '('  shift, and go to state 51


State 41

   11 statement: IF '(' expression . ')' statement ELSE statement
   12          | IF '(' expression . ')' statement
   25 expression: expression . AND expression
   26           | expression . OR expression
   27           | expression . EQ expression
   28           | expression . NEQ expression
   29           | expression . '<' expression
   30           | expression . LEQ expression
   31           | expression . '>' expression
   32           | expression . GEQ expression
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '^' expression

    AND  shift, and go to state 52
    OR   shift, and go to state 53
    NEQ  shift, and go to state 54
    EQ   shift, and go to state 55
    LEQ  shift, and go to state 56
    GEQ  shift, and go to state 57
    '<'  shift, and go to state 58
    '>'  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '^'  shift, and go to state 64
    ')'  shift, and go to state 65


State 42

   44 expression: variable . $@1

    $default  reduce using rule 43 ($@1)

    $@1  go to state 66


State 43

   46 variable: ID '[' INT_C . ']'

    ']'  shift, and go to state 67


State 44

   10 statement: variable '=' expression . ';'
   25 expression: expression . AND expression
   26           | expression . OR expression
   27           | expression . EQ expression
   28           | expression . NEQ expression
   29           | expression . '<' expression
   30           | expression . LEQ expression
   31           | expression . '>' expression
   32           | expression . GEQ expression
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '^' expression

    AND  shift, and go to state 52
    OR   shift, and go to state 53
    NEQ  shift, and go to state 54
    EQ   shift, and go to state 55
    LEQ  shift, and go to state 56
    GEQ  shift, and go to state 57
    '<'  shift, and go to state 58
    '>'  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '^'  shift, and go to state 64
    ';'  shift, and go to state 68


State 45

    8 declaration: type ID '=' expression . ';'
   25 expression: expression . AND expression
   26           | expression . OR expression
   27           | expression . EQ expression
   28           | expression . NEQ expression
   29           | expression . '<' expression
   30           | expression . LEQ expression
   31           | expression . '>' expression
   32           | expression . GEQ expression
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '^' expression

    AND  shift, and go to state 52
    OR   shift, and go to state 53
    NEQ  shift, and go to state 54
    EQ   shift, and go to state 55
    LEQ  shift, and go to state 56
    GEQ  shift, and go to state 57
    '<'  shift, and go to state 58
    '>'  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '^'  shift, and go to state 64
    ';'  shift, and go to state 69


State 46

    9 declaration: CONST type ID '=' expression . ';'
   25 expression: expression . AND expression
   26           | expression . OR expression
   27           | expression . EQ expression
   28           | expression . NEQ expression
   29           | expression . '<' expression
   30           | expression . LEQ expression
   31           | expression . '>' expression
   32           | expression . GEQ expression
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '^' expression

    AND  shift, and go to state 52
    OR   shift, and go to state 53
    NEQ  shift, and go to state 54
    EQ   shift, and go to state 55
    LEQ  shift, and go to state 56
    GEQ  shift, and go to state 57
    '<'  shift, and go to state 58
    '>'  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '^'  shift, and go to state 64
    ';'  shift, and go to state 70


State 47

   22 expression: FUNC '(' . arguments_opt ')'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    $default  reduce using rule 50 (arguments_opt)

    type           go to state 40
    expression     go to state 71
    variable       go to state 42
    arguments      go to state 72
    arguments_opt  go to state 73


State 48

   23 expression: '-' expression .
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQ expression
   28           | expression . NEQ expression
   29           | expression . '<' expression
   30           | expression . LEQ expression
   31           | expression . '>' expression
   32           | expression . GEQ expression
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '^' expression

    $default  reduce using rule 23 (expression)


State 49

   24 expression: '!' expression .
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQ expression
   28           | expression . NEQ expression
   29           | expression . '<' expression
   30           | expression . LEQ expression
   31           | expression . '>' expression
   32           | expression . GEQ expression
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '^' expression

    $default  reduce using rule 24 (expression)


State 50

   25 expression: expression . AND expression
   26           | expression . OR expression
   27           | expression . EQ expression
   28           | expression . NEQ expression
   29           | expression . '<' expression
   30           | expression . LEQ expression
   31           | expression . '>' expression
   32           | expression . GEQ expression
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '^' expression
   42           | '(' expression . ')'

    AND  shift, and go to state 52
    OR   shift, and go to state 53
    NEQ  shift, and go to state 54
    EQ   shift, and go to state 55
    LEQ  shift, and go to state 56
    GEQ  shift, and go to state 57
    '<'  shift, and go to state 58
    '>'  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '^'  shift, and go to state 64
    ')'  shift, and go to state 74


State 51

   21 expression: type '(' . arguments_opt ')'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    $default  reduce using rule 50 (arguments_opt)

    type           go to state 40
    expression     go to state 71
    variable       go to state 42
    arguments      go to state 72
    arguments_opt  go to state 75


State 52

   25 expression: expression AND . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 76
    variable    go to state 42


State 53

   26 expression: expression OR . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 77
    variable    go to state 42


State 54

   28 expression: expression NEQ . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 78
    variable    go to state 42


State 55

   27 expression: expression EQ . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 79
    variable    go to state 42


State 56

   30 expression: expression LEQ . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 80
    variable    go to state 42


State 57

   32 expression: expression GEQ . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 81
    variable    go to state 42


State 58

   29 expression: expression '<' . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 82
    variable    go to state 42


State 59

   31 expression: expression '>' . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 83
    variable    go to state 42


State 60

   33 expression: expression '+' . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 84
    variable    go to state 42


State 61

   34 expression: expression '-' . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 85
    variable    go to state 42


State 62

   35 expression: expression '*' . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 86
    variable    go to state 42


State 63

   36 expression: expression '/' . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 87
    variable    go to state 42


State 64

   37 expression: expression '^' . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 32
    TRUE_C   shift, and go to state 33
    FUNC     shift, and go to state 34
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 35
    INT_C    shift, and go to state 36
    ID       shift, and go to state 18
    '-'      shift, and go to state 37
    '!'      shift, and go to state 38
    '('      shift, and go to state 39

    type        go to state 40
    expression  go to state 88
    variable    go to state 42


State 65

   11 statement: IF '(' expression ')' . statement ELSE statement
   12          | IF '(' expression ')' . statement

    IF   shift, and go to state 17
    ID   shift, and go to state 18
    '{'  shift, and go to state 1
    ';'  shift, and go to state 20

    scope      go to state 21
    statement  go to state 89
    variable   go to state 23


State 66

   44 expression: variable $@1 .

    $default  reduce using rule 44 (expression)


State 67

   46 variable: ID '[' INT_C ']' .

    $default  reduce using rule 46 (variable)


State 68

   10 statement: variable '=' expression ';' .

    $default  reduce using rule 10 (statement)


State 69

    8 declaration: type ID '=' expression ';' .

    $default  reduce using rule 8 (declaration)


State 70

    9 declaration: CONST type ID '=' expression ';' .

    $default  reduce using rule 9 (declaration)


State 71

   25 expression: expression . AND expression
   26           | expression . OR expression
   27           | expression . EQ expression
   28           | expression . NEQ expression
   29           | expression . '<' expression
   30           | expression . LEQ expression
   31           | expression . '>' expression
   32           | expression . GEQ expression
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '^' expression
   48 arguments: expression .

    AND  shift, and go to state 52
    OR   shift, and go to state 53
    NEQ  shift, and go to state 54
    EQ   shift, and go to state 55
    LEQ  shift, and go to state 56
    GEQ  shift, and go to state 57
    '<'  shift, and go to state 58
    '>'  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '^'  shift, and go to state 64

    $default  reduce using rule 48 (arguments)


State 72

   47 arguments: arguments . ',' expression
   49 arguments_opt: arguments .

    ','  shift, and go to state 90

    $default  reduce using rule 49 (arguments_opt)


State 73

   22 expression: FUNC '(' arguments_opt . ')'

    ')'  shift, and go to state 91


State 74

   42 expression: '(' expression ')' .

    $default  reduce using rule 42 (expression)


State 75

   21 expression: type '(' arguments_opt . ')'

    ')'  shift, and go to state 92


State 76

   25 expression: expression . AND expression
   25           | expression AND expression .
   26           | expression . OR expression
   27           | expression . EQ expression
   28           | expression . NEQ expression
   29           | expression . '<' expression
   30           | expression . LEQ expression
   31           | expression . '>' expression
   32           | expression . GEQ expression
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '^' expression

    NEQ  shift, and go to state 54
    EQ   shift, and go to state 55
    LEQ  shift, and go to state 56
    GEQ  shift, and go to state 57
    '<'  shift, and go to state 58
    '>'  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '^'  shift, and go to state 64

    $default  reduce using rule 25 (expression)


State 77

   25 expression: expression . AND expression
   26           | expression . OR expression
   26           | expression OR expression .
   27           | expression . EQ expression
   28           | expression . NEQ expression
   29           | expression . '<' expression
   30           | expression . LEQ expression
   31           | expression . '>' expression
   32           | expression . GEQ expression
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '^' expression

    AND  shift, and go to state 52
    NEQ  shift, and go to state 54
    EQ   shift, and go to state 55
    LEQ  shift, and go to state 56
    GEQ  shift, and go to state 57
    '<'  shift, and go to state 58
    '>'  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '^'  shift, and go to state 64

    $default  reduce using rule 26 (expression)


State 78

   25 expression: expression . AND expression
   26           | expression . OR expression
   27           | expression . EQ expression
   28           | expression . NEQ expression
   28           | expression NEQ expression .
   29           | expression . '<' expression
   30           | expression . LEQ expression
   31           | expression . '>' expression
   32           | expression . GEQ expression
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '^' expression

    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '^'  shift, and go to state 64

    $default  reduce using rule 28 (expression)


State 79

   25 expression: expression . AND expression
   26           | expression . OR expression
   27           | expression . EQ expression
   27           | expression EQ expression .
   28           | expression . NEQ expression
   29           | expression . '<' expression
   30           | expression . LEQ expression
   31           | expression . '>' expression
   32           | expression . GEQ expression
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '^' expression
